--- a/proyecto1.csproj
+++ b/proyecto1.csproj
@@ -56,6 +56,7 @@
     <Compile Include="listas.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="sintactico_201700317.cs" />
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
     </EmbeddedResource>
